Kubernetes/Deployments/ApacheNifi/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: nifi
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nifi
  template:
    metadata:
      labels:
        app: nifi
    spec:
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      containers:
      - name: nifi-container
        image: sunmanregistry.azurecr.io/nifi:latest
        ports:
        - containerPort: 8080
          name: http
        - containerPort: 22
          name: ssh
        resources:
          requests:
            cpu: ".5"
            memory: "6Gi"
          limits:
            cpu: "1"
---
apiVersion: v1
kind: Service
metadata:
  name: nifi-service
  namespace: nifi
spec:
  selector:
    app: nifi
  ports:
  - protocol: TCP
    targetPort: 8080
    port: 8080
    name: ui
  - protocol: TCP
    targetPort: 9088
    port: 9088
    name: node-protocol-port
  - protocol: TCP
    targetPort: 8888
    port: 8888
    name: s2s
  type: LoadBalancer

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apache-nifi-ingress
  namespace: nifi
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-ca-issuer
    cert-manager.io/common-name: nifi.homelab.kbushby.com
    external-dns.alpha.kubernetes.io/hostname: nifi.homelab.kbushby.com
spec:
  ingressClassName: nginx
  rules:
  - host: nifi.homelab.kbushby.com
    http:
      paths:
      - backend:
          service:
            name: nifi-service
            port:
              number: 8080
              # targetPort: ui
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - nifi.homelab.kbushby.com
    secretName: keycloak-tls
